# Ilate-lift

./: .gitignore  BACKLOG.md  README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: deploy-lift-v1-1.yml  deploy-lift.yml
apps/cv-web-autofill/: CV2026-Edmundo_Frazao_PT_AUTOMACAO_TEMPLATE.docx  CV_INPUT_EXEMPLO_TRM.txt  CV_TEST_WEB_OUTPUT.docx  CV_TEST_WEB_OUTPUT_rebuilt.docx  CV_preenchido_fix.docx  CV_preenchido_fix_v2.docx  CV_preenchido_fix_v3.docx  CV_preenchido_fix_v4.docx  CV_preenchido_fix_v5.docx  CV_preenchido_fix_v6.docx  Open_CV_Web_Autofill.command  README.md  Run_CV_Web_Autofill.command  app.py
apps/elevator-budget-app/: APP_OPERATION_MANUAL.md  CUSTOM_BOT_TEST_PACK.md  DEPLOY_SERVER.md  GO_LIVE_CHECKLIST.md  GO_LIVE_PLAN.md  HOSTING_FIT.md  LEGAL_BOT_TEST_PACK.md  LOCAL_USE_HOME.md  OPERATIONS_RUNBOOK.md  ORCS_DEBUG_PACK.md  ORCS_DEPLOY_HOME.md  ORCS_STREAMLIT_TEST_PLAN.md  README.md  RUNTIME_BRAIN_HOME.md  RUNTIME_BRAIN_MANIFEST.yaml  SERVER_COMMANDS.md  UPLOAD_SERVER.md  __init__.py  app.py  assistant.py  bootstrap_remote_orcs.sh  build_orcs_deploy_bundle.sh  calculations.py  catalog_loader.py  check_remote_orcs_runtime.sh  config.py  ekl_orc_app.py  ekl_orc_workbook.py  enable_remote_orcs_nginx.sh  enable_remote_orcs_service.sh  exporter.py  extract_ekl_workbook.py  (+32 more)
docs/: V1_1_RUNTIME_EDITOR.md  V2_RECONSTRUCTION_STATUS.md  standards-application-plan.md
scripts/: build-tailwind.mjs
src/: App.tsx  index.css  main.tsx  tailwind.generated.css
(+118 files in other folders)
